- use different style of signal names for testing

--- a/newsyslog.conf
+++ b/newsyslog.conf
@@ -3,14 +3,14 @@
 #
 # log_filename  [owner:group] mode count kb   hrs/at [flgs][/pid_file][sig]
 #               |             |    |     |    |      |     |
-/var/log/aculog uucp:dialer   640  10    *    ML     Z0    /dev/null  INT
+/var/log/aculog uucp:dialer   640  10    *    ML     Z0    /dev/null  sigint
 /var/log/auth                 640  10    100  *      Z0
 /var/log/authpriv             640  10    100  *      Z0
 /var/log/cron                 640  3     *    D0     Z0               HUP
-/var/log/daemon               644  4     500  168    Z0
+/var/log/daemon               644  4     500  168    Z0               hup
 /var/log/debug                640  4     1000 168    Z0
 /var/log/httpd/access_log     644  5     *    D0     Z0    # only last one
-/var/log/httpd/error_log      644  5     *   D0 Z0 /var/run/httpd.pid USR1
+/var/log/httpd/error_log      644  5     *   D0 Z0 /var/run/httpd.pid SIGUSR1
 /var/log/kerberos.log         640  10    *    D0     Z0    /dev/null
 /var/log/kern                 644  10    500  *      Z0
 /var/log/local                644  10    1000 168    Z0
