--- a/configure.in
+++ b/configure.in
@@ -10,7 +10,7 @@ AC_INIT(newsyslog.c)
 dnl Required Autoconf version.
 AC_PREREQ(2.12)
 
-AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.34 2002/01/04 00:41:38 woods Exp $"])
+AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.35 2002/01/04 18:31:25 woods Exp $"])
 
 dnl for Automake
 PACKAGE="newsyslog"
@@ -74,7 +74,7 @@ dnl Checks for header files.
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
 AC_HEADER_TIME
-AC_CHECK_HEADERS(errno.h string.h netdb.h sys/file.h sys/proc.h unistd.h)
+AC_CHECK_HEADERS(errno.h string.h netdb.h sys/file.h sys/param.h sys/proc.h unistd.h)
 
 AC_MSG_CHECKING(for sys/cdefs.h)
 AC_TRY_CPP([
