- a better variety of settings to make testing easier on the development   system, and some more documentation about those settings

--- a/newsyslog.conf
+++ b/newsyslog.conf
@@ -1,5 +1,11 @@
 #
-# sample configuration file for newsyslog
+#	newsyslog.conf - sample configuration file for newsyslog
+# 
+# WARNING:  the values used in this sample file are strictly for
+# demonstration and documentation purposes and are not necessarily the
+# best for real life use!
+#
+#ident "#(@):$Name:  $:$Id: newsyslog.conf,v 1.12 2002/05/10 17:42:46 woods Exp $"
 #
 # log_filename  [owner:group] mode count kb   hrs/at [flgs][/pid_file][sig]
 #               |             |    |     |    |      |     |
@@ -7,7 +13,7 @@
 /var/log/auth                 640  10    100  *      Z0
 /var/log/authpriv             640  10    100  *      Z0
 /var/log/cron                 640  3     *    D0     Z0               HUP
-/var/log/daemon               644  4     500  168    Z0               hup
+/var/log/daemon               644  8     500  168    Z0               hup
 /var/log/debug                640  4     1000 168    Z0
 /var/log/httpd/access_log     644  5     *    D0     Z0    # only last one
 /var/log/httpd/error_log      644  5     *   D0 Z0 /var/run/httpd.pid SIGUSR1
@@ -18,12 +24,12 @@
 /var/log/lpd-acct daemon:staff 644 4     *    ML     Z0
 /var/log/lpr                  644  5     250  *      Z0
 /var/log/mail  root:staff     640  52    *    W0D0   Z0
-/var/log/messages             644  10    1000 168    Z0
+/var/log/messages             644  10    500  168    Z
 /var/log/news  news:news      644  2     *    D0     Z0
-/var/log/smail/logfile        644  5     *    W0D0   Z0    /dev/null
-/var/log/smail/paniclog       644  5     500  168-D0 Z0    /dev/null
+/var/log/smail/logfile        644  52    *    W0D0   DZ0   /dev/null
+/var/log/smail/paniclog       644  5     500  168-D0 DZ0   /dev/null
 /var/log/syslog               640  3     500  *      Z0
 /var/log/user                 644  10    500  *      Z0
 /var/log/uucp  uucp:operator  644  5     *    W0D0   Z0
-/var/log/wtmp                 644  10    *    ML     BZ0
+/var/log/wtmp                 644  10    *    ML     bZ0
 /var/log/xferlog              640  10    *    W0D0   Z0
